sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:6: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
      while (j!=0&&){
                 ^AlgInsertionSort:10: error: not found: value echange_pos
          echange_pos=true
          ^